Footer, fixed gap calendly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;800&display=swap');
 * {
     margin: 0;
     padding: 0
 }
 
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Playfair Display', serif;
+
 }
 
 .custom-background {
-    /* background-image: url('../src/assets/hero.jpg'); */
+    background-image: url('../src/assets/nail.jpg');
     background-size: cover;
-    width: auto;
-    height: 900px;
+    background-position: center;
+    width: 100%;
+    height: 80vh;
 }
 
-.menu-item {
-    position: relative;
-    border-radius: 20px;
-    overflow: hidden;
-    margin: 30px;
-  }
 
